# chgk_backend

./: Makefile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
chgk/: asgi.py  settings.py  urls.py  views.py  wsgi.py
chgk/api/: admin.py  apps.py  serializers.py  urls.py  views.py
chgk/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
chgk/users/migrations/: 0001_initial.py
templates/: index.html
